@@ -5,8 +5,6 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-module-prometheus]]
 == Prometheus module
 
-beta[]
-
 This module periodically fetches metrics from
 https://prometheus.io/docs/[Prometheus].
 
