@@ -5,8 +5,6 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-prometheus-collector]]
 === Prometheus collector metricset
 
-beta[]
-
 include::../../../module/prometheus/collector/_meta/docs.asciidoc[]
 
 
