@@ -3,7 +3,7 @@
   description: >
     Stats collected from Prometheus.
   short_config: false
-  release: beta
+  release: ga
   settings: ["ssl"]
   fields:
     - name: prometheus
