@@ -319,6 +319,7 @@ https://github.com/elastic/beats/compare/v6.2.3...master[Check the HEAD diff]
 - Release elasticsearch module and all its metricsets as beta. {pull}7662[7662]
 - Release munin and traefik module as beta. {pull}7660[7660]
 - Add envoyproxy module. {pull}7569[7569]
+- Release prometheus collector metricset as GA. {pull}7660[7660]
 
 *Packetbeat*
 
